@@ -31,12 +31,13 @@ public class HolidaysController {
             model.addAttribute("festival",true);
         }
         Iterable<Holiday> holidays = holidaysRepository.findAll();
-        List<Holiday> holidaysList = StreamSupport.stream(holidays.spliterator(), false).toList();
-
+        List<Holiday> holidayList = StreamSupport
+                .stream(holidays.spliterator(), false)
+                .collect(Collectors.toList());
         Holiday.Type[] types = Holiday.Type.values();
         for (Holiday.Type type : types) {
             model.addAttribute(type.toString(),
-                    (holidaysList.stream().filter(holiday -> holiday.getType().equals(type)).collect(Collectors.toList())));
+                    (holidayList.stream().filter(holiday -> holiday.getType().equals(type)).collect(Collectors.toList())));
         }
         return "holidays.html";
     }
